css/fccstyles.css
@font-face {
	font-family: mohave;
	src: url('../mohave.otf');
}

body {
	font-family: mohave;
	background: #F5F3EE;
	text-align: center;
	color: #39b1c6;
}

.noOverflow {
	overflow-x: hidden;
}

.navbar-default .navbar-nav li a, .navbar-default .navbar-header {
	color: #39b1c6;
}

.navbar-default .navbar-nav li a:hover, .navbar-default .navbar-header:hover {
	color: #39b1c6;
	text-shadow: 2px 2px 1px #1fd26a;
}

nav {
	font-size: 18px;
}

.landscape {
	background-size: cover;
	background-image: url("../images/tufts.jpg");
	background-repeat: no-repeat;
}

.socc {
	background-size: cover;
	background-image: url("../images/jumbo.png");
	background-repeat: no-repeat;
	height: 680px;
}

.wball {
	background-size: cover;
	background-image: url("../images/running.png");
	background-repeat: no-repeat;
	height: 680px;
}

#Juke, #Portfolio, #Resources {
	padding-top: 100px;
	padding-bottom: 100px;
}

h1 {
	color: #1fd26a;
}

#Resources img {
	opacity: 0.6;
}

#Resources img:hover {
	opacity: 1;
}

#Juke img {
	border: none;
	border-radius: 100%;
	height: 50%;
	width: 50%;
}

h2, h3, h4 {
	font-family: open sans, calibri;
}

